--- a/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-spring.application.name=rest-with-springboot-and-java-uelisson
+spring:
+  application:
+    name: rest-with-springboot-and-java-uelisson
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/rest-with-springboot-and-java-uelisson?useTimezone=true&serverTimezone=UTC
+    username: root
+    password: Uelisson@4123
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+    show-sql: false
+
+    open-in-view: false
+logging:
+  level:
+    br.com.welissontiago: DEBUG
