Treinando manipulações com Json

--- a/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: Uelisson@4123
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
     show-sql: false
