--- a/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
 logging:
   level:
     br.com.welissontiago: DEBUG
+spring-doc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
