--- a/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8888
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000
 spring:
@@ -5,9 +7,6 @@ spring:
     name: rest-with-springboot-and-java-uelisson
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rest-with-springboot-and-java-uelisson?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: Uelisson@4123
   jpa:
     hibernate:
       ddl-auto: none
