--- a/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8888
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000
+file:
+  upload-dir: D:/UploadCurso
 spring:
   application:
     name: rest-with-springboot-and-java-uelisson
@@ -14,6 +16,12 @@ spring:
       hibernate:
     show-sql: false
     open-in-view: false
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
 logging:
   level:
     br.com.welissontiago: DEBUG
