Adicionado envio de emails com e sem arquivo na aplicação, feito o controller, serviço e as configurações corretamentes para envio dos emails

--- a/rest-with-springboot-and-java-uelisson/pom.xml
+++ b/rest-with-springboot-and-java-uelisson/pom.xml
@@ -37,9 +37,15 @@
 		<zxing.version>3.5.3</zxing.version>
 	</properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
 		<dependency>
