--- a/rest-with-springboot-and-java-uelisson/pom.xml
+++ b/rest-with-springboot-and-java-uelisson/pom.xml
@@ -35,6 +35,7 @@
 		<commons-csv.version>1.12.0</commons-csv.version>
 		<jasperreports.version>7.0.1</jasperreports.version>
 		<zxing.version>3.5.3</zxing.version>
+		<java-jwt.version>4.4.0</java-jwt.version>
 	</properties>
 	<dependencies>
 
@@ -51,6 +52,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${java-jwt.version}</version>
 		</dependency>
 
 		<dependency>
