--- a/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
@@ -2,6 +2,11 @@ cors:
   originPatterns: http://localhost:8080,http://localhost:3000
 file:
   upload-dir: D:/UploadCurso
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-lenght: 3600000
 email:
   subject: "Default Subject"
   message: "Default Message"
