--- a/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 80
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000
 file:
@@ -15,7 +17,7 @@ spring:
     name: rest-with-springboot-and-java-uelisson
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rest-with-springboot-and-java-uelisson?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://db:3306/rest-with-springboot-and-java-uelisson?useTimezone=true&serverTimezone=UTC
     username: root
     password: Uelisson@4123
   jpa:
