--- a/.github/workflows/continuos-deployment.yml
+++ b/.github/workflows/continuos-deployment.yml
@@ -20,9 +20,26 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-    - uses: actions/setup-java@v4
+    - name: Setup Java 21
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
+    - name: Build application .jar
+      working-directory: ./rest-with-springboot-and-java-erudio/rest-with-springboot-and-java-uelisson
+      run:  .\mvnw.cmd clean package #pode dar erro vou apenas deixar comentado pra consertar depois se der erro
+
+
+    - name: Docker Compose Build
+      working-directory: ./rest-with-springboot-and-java-erudio
+      run: docker compose build
+
+    - name: Push to DockerHub Container Registry
+      run: | 
+        docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:{{ github.run_id }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
+
 
