--- a/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
+++ b/rest-with-springboot-and-java-uelisson/src/test/resources/application.yml
@@ -3,7 +3,7 @@ server:
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000
 file:
-  upload-dir: /home/runner/work/rest-with-springboot-and-java-erudio/UploadCurso
+  upload-dir: ${java.io.tmpdir}/UploadCurso
 security:
   jwt:
     token:
