--- a/.github/workflows/continuos-deployment.yml
+++ b/.github/workflows/continuos-deployment.yml
@@ -6,40 +6,37 @@ on:
       - "main"
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'adopt'
+          cache: maven
+          cache-dependency-path: ./rest-with-springboot-and-java-uelisson/pom.xml
 
-    - name: Setup Java 21
-      uses: actions/setup-java@v2
-      with:
-        java-version: '21'
-        distribution: 'adopt'
-        cache: maven
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-    - name: Build application .jar
-      working-directory: ./rest-with-springboot-and-java-uelisson
-      run: mvn clean package
+      - name: Build application JAR
+        working-directory: ./rest-with-springboot-and-java-uelisson
+        run: mvn clean package -DskipTests
 
+      - name: Build Docker image
+        run: |
+          docker compose build
 
-    - name: Docker Compose Build
-      working-directory: .
-      run: docker compose build
-
-    - name: Push to DockerHub Container Registry
-      run: | 
-        docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:{{ github.run_id }}
-        docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
-
-
+      - name: Tag and push Docker image to Docker Hub
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
