Adicionando continuos deployment a AWS

--- a/.github/workflows/continuos-deployment.yml
+++ b/.github/workflows/continuos-deployment.yml
@@ -27,6 +27,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4 # More information on this action can be found below in the 'AWS Credentials' section
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
       - name: Build application JAR
         working-directory: ./rest-with-springboot-and-java-uelisson
         run: mvn clean package -DskipTests
@@ -35,8 +46,17 @@ jobs:
         run: |
           docker compose build
 
+      - name: Tag and push Docker image to Amazon ECR
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.IMAGE_REPO_URL }}:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.IMAGE_REPO_URL }}:${{ github.run_id }}
+          docker push ${{ secrets.IMAGE_REPO_URL }}:latest
+          docker push ${{ secrets.IMAGE_REPO_URL }}:${{ github.run_id }}
+
       - name: Tag and push Docker image to Docker Hub
         run: |
           docker tag ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
           docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/rest-with-springboot-uelisson:${{ github.run_id }}
+          
+      
